# Automated-Commercial-Credit-Analyst

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: logging_config.py  settings.py
database/: README.md  postgres_db.py  vector_db.py
