[project]
name = "automated-commercial-credit-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "beautifulsoup4==4.12.3",
    "black==24.10.0",
    "colorlog==6.9.0",
    "flake8==7.1.1",
    "langchain==0.3.7",
    "langchain-groq==0.2.1",
    "langgraph==0.2.45",
    "lxml==5.3.0",
    "mypy==1.13.0",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "qdrant-client==1.11.3",
    "requests==2.32.3",
    "sec-edgar-downloader==5.0.3",
    "sentence-transformers==3.2.1",
    "sqlalchemy==2.0.35",
    "tenacity==9.0.0",
    "torch==2.5.1",
    "tqdm==4.66.6",
]
